# ChangeLog for net-www/jboss
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/jboss/Attic/ChangeLog,v 1.15 2004/04/27 19:57:37 agriffis Exp $

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> jboss-3.2.3.ebuild:
  Add inherit eutils

  17 Apr 2004; Jason Wever <weeve@gentoo.org> jboss-3.2.3.ebuild:
  Added ~sparc keyword.

*jboss-3.2.3 (20 Dec 2003)

  20 Dec 2003; <mkennedy@gentoo.org> jboss-3.2.3.ebuild, metadata.xml,
  files/3.2.1/conf.d/jboss, files/3.2.3/README.Gentoo, files/3.2.3/catalog,
  files/3.2.3/log4j.xml, files/3.2.3/conf.d/jboss, files/3.2.3/env.d/50jboss,
  files/3.2.3/init.d/jboss:
  Minor version update to latest.  Resolution of bug #30554
  (hypersonicsql vulnerable via. default config).  Corrected temporary
  file directory, bug #28284.  Resolved bug #24256 (JJTree build
  failure in 3.2.1).  Added metadata.xml with maintainer information.
  Moved install files from /opt to /usr/share/jboss, /var/log/jboss,
  /var/cache/jboss and /var/tmp/jboss.  Build all groups by default
  (see src_compile).  Expanded JBoss configuration file for Gentoo
  (/etc/conf.d/jboss).  Replace useradd/groupadd with enewuser,
  enewgroup and make robust.  Add SGML catalogs for DTDs distributed
  with JBoss.  Add CONFIG_PROTECT for server directories.  Corrected
  Java package.env file list.

  08 Dec 2003; <spider@gentoo.org> files/3.2.1/init.d/jboss:
  fixed chown issue ( bug #35127 )

  23 Nov 2003; Martin Holzer <mholzer@gentoo.org> jboss-3.0.1_rc1.ebuild,
  jboss-3.0.6.ebuild, jboss-3.2.1-r1.ebuild, jboss-3.2.1.ebuild:
  adding RESTRICT="nomirror"

  29 Oct 2003; David Holm <dholm@gentoo.org> jboss-3.2.1-r1.ebuild:
  Added to ~ppc, tested with ibm-jdk-1.4.1.

*jboss-3.2.1-r1 (10 Jul 2003)

  10 Jul 2003; Matthew Kennedy <mkennedy@gentoo.org> jboss-3.2.1-r1.ebuild,
  files/3.2.1/conf.d/jboss, files/3.2.1/init.d/jboss: