@@ -1,6 +1,9 @@
 # ChangeLog for net-www/jboss
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/jboss/Attic/ChangeLog,v 1.15 2004/04/27 19:57:37 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/jboss/Attic/ChangeLog,v 1.16 2004/05/19 04:55:25 zx Exp $
+
+  19 May 2004; Chris Aniszczyk <zx@gentoo.org> jboss-3.2.3.ebuild:
+  Closes #51069
 
   27 Apr 2004; Aron Griffis <agriffis@gentoo.org> jboss-3.2.3.ebuild:
   Add inherit eutils
